For more detailed instructions on filling in the ChangeLog form, see 
`/fi/doc/procedures/changelogs.txt'.
*******************************************************************************
<version for this commit> (in version.mak)

<standard changelog date stamp>
	* <changes go here...>

******************************************************************************
post-6.2 release changes: 

2002-12-12  Kevin Layer  <layer@crikey>

	* fi-emacs19.el (fi::lisp-font-lock-keywords): bug12862: fix order
	of regexp parts for better font-locking

2002-10-24  Kevin Layer  <layer@crikey>

	* fi-subproc.el: bug12600: add `.' to lisp prompt regexp

2002-09-27    <layer@HOBART>

	* Makefile: updated cygwin no longer has `pwd' in env, so make it

2002-09-25  Kevin Layer  <layer@crikey>

	* fi-lep.el: bug12531: fix another fontification problem

******************************************************************************
2.3.5

2002-04-11  Kevin Layer  <layer@crikey>

	* fi-keys.el (fi:super-paren): bug12029

******************************************************************************
2.3.4

join from acl61 to acl6 branch on 02Mar2002
command: join.sh acl61 acl61_to_acl6_merge2 acl61_to_acl6_02Mar2002 eli

******************************************************************************
2.3.3

2002-02-26  Kevin Layer  <layer@crikey>

	* fi-emacs19.el: from mikel: bug11469: more fixes for same bug

******************************************************************************
2.3.2

2002-02-13  Kevin Layer  <layer@crikey>

	* fi-lep.el: bug11676: convert a couple of hidden defontifications
	to use fi::defontify-string

******************************************************************************
2.3.1

2002-01-28  Kevin Layer  <layer@crikey>

	* fi-sublisp.el (fi:show-run-status),
	* fi-utils.el (fi:start-interface-via-file): bug11616: show run
	bar, too

	* fi-subproc.el (fi:common-lisp-image-name): rfe5015: change
	default image name to `alisp'.
