@@ -9,6 +9,14 @@ For more detailed instructions on filling in the ChangeLog form, see
 ******************************************************************************
 post-6.2 release changes: 
 
+2003-01-28  Kevin Layer  <layer@crikey>
+
+	* fi-indent.el: bug13001: damn, just missed bug 13,000!  Anyway,
+	  indent while and until properly
+	* fi-subproc.el: bug13001: damn, just missed bug 13,000!  Anyway,
+	  fix bug whereby first completion in a shell buffer would get "No
+	  marker" error.
+
 2002-12-12  Kevin Layer  <layer@crikey>
 
 	* fi-emacs19.el (fi::lisp-font-lock-keywords): bug12862: fix order
